remove inline css, and fix other layout issues

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ h2 {
   font-size: 1.5em;
 }
 
+.underline-text {
+  text-decoration: underline;
+}
+
 .menu {
   margin: auto;
   text-align: center;
@@ -30,8 +34,7 @@ img {
   float: left;
   width: 300px;
   height: 200px;
-  border: 5px solid black;
-
+  margin-right: 10px;
   /* background-image: url("assets/sea.jpg"); */
 }
 
@@ -40,6 +43,9 @@ img {
   float: right;
   width: 300px;
   height: 200px;
+}
+
+.div-border {
   border: 5px solid black;
 }
 
@@ -47,12 +53,13 @@ img {
   /* display: inline; */
   width: 300px;
   height: 200px;
-  border: 5px solid black;
+  border: 5px solid blue;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: 30% 30% 30%;
+  grid-template-columns: 25% 25% 25% 25%;
   gap: 10px;
   padding: 10px;
+  margin-left: 5%;
 }
